--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,16 @@
   <body>
     <header>
       <nav>
-        <a href="#">MH</a>
+        <a href="./index.html">MH</a>
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="#">Blog</a>
+            <a href="./blog.html">Blog</a>
           </li>
           <li>
-            <a href="#">Contact me</a>
+            <a href="./contact.html">Contact me</a>
           </li>
         </ul>
       </nav>
@@ -92,10 +92,14 @@
         <h3>Social Media</h3>
         <ul>
           <li>
-            <a href="www.linkedin.com/in/mariam-alchater">LinkedIn</a>
+            <a href="www.linkedin.com/in/mariam-alchater" target="_blank"
+              >LinkedIn</a
+            >
           </li>
           <li>
-            <a href="www.linkedin.com/in/mariam-alchater">Github</a>
+            <a href="www.linkedin.com/in/mariam-alchater" target="_blank"
+              >Github</a
+            >
           </li>
         </ul>
       </div>
@@ -109,15 +113,13 @@
             <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="./index.html">Blog</a>
+            <a href="./blog.html">Blog</a>
           </li>
           <li>
-            <a href="./index.html">Contact me</a>
+            <a href="./contact.html">Contact me</a>
           </li>
         </ul>
       </div>
-
-      <div></div>
     </footer>
   </body>
 </html>
