--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
   <body>
     <header>
       <nav>
-        <a href="#">MH</a>
+        <a href="./index.html">MH</a>
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="#">Blog</a>
+            <a href="./blog.html">Blog</a>
           </li>
           <li>
-            <a href="#">Contact me</a>
+            <a href="./contact.html">Contact me</a>
           </li>
         </ul>
       </nav>
     </header>
+
+    <hr />
 
     <main>
       <section>
@@ -34,10 +36,19 @@
             A computer Engineering fresh graduate with a passion in AI and
             Software Engineering
           </p>
+          <button>Get in touch with me</button>
         </div>
-        <img width="300" height="300" src="1233.png" alt="My Image" />
+        <img
+          width="300"
+          height="300"
+          src="1233.png"
+          alt="My Image"
+          loading="lazy"
+        />
         <div></div>
       </section>
+
+      <hr />
 
       <section>
         <!-- Latest Posts -->
@@ -48,6 +59,7 @@
               <img
                 src="https://via.placeholder.com/150"
                 alt="Placeholder Image"
+                loading="lazy"
               />
             </div>
             <div>
@@ -65,6 +77,7 @@
               <img
                 src="https://via.placeholder.com/150"
                 alt="Placeholder Image"
+                loading="lazy"
               />
             </div>
             <div>
@@ -82,6 +95,7 @@
               <img
                 src="https://via.placeholder.com/150"
                 alt="Placeholder Image"
+                loading="lazy"
               />
             </div>
             <div>
@@ -100,6 +114,41 @@
       </section>
     </main>
 
-    <footer></footer>
+    <hr />
+
+    <footer>
+      <div>
+        <h3>Social Media</h3>
+        <ul>
+          <li>
+            <a href="www.linkedin.com/in/mariam-alchater" target="_blank"
+              >LinkedIn</a
+            >
+          </li>
+          <li>
+            <a href="www.linkedin.com/in/mariam-alchater" target="_blank"
+              >Github</a
+            >
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <h3>Mariam Alchater</h3>
+        <p>Computer Engineer</p>
+        <h3>Quik Links</h3>
+        <ul>
+          <li>
+            <a href="./index.html">Home</a>
+          </li>
+          <li>
+            <a href="./blog.html">Blog</a>
+          </li>
+          <li>
+            <a href="./contact.html">Contact me</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
