FIX(LandingContactButton): fix issue in link for contact button in landing sectio

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             A computer Engineering fresh graduate with a passion in AI and
             Software Engineering
           </p>
-          <button>Get in touch with me</button>
+          <a href="./contact.html"><button>Get in touch with me</button></a>
         </div>
         <img
           width="300"
